Solve problem with white space below footer

--- a/src/style.css
+++ b/src/style.css
@@ -57,7 +57,6 @@ body {
   margin-bottom: 5px;
   bottom: 0;
   width: 100%;
-  height: 20px;
   font-size: 14px;
   color: rgb(3, 85, 31);
 }
